[package]
name = "wit-abi"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
clap = { version = "4.1.4", features = ["derive"] }
wit-parser = "0.6.0"
wit-bindgen-core = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "b0b9e457d56b7b18f2e9c7a876b8a6c62bcb98ca" }
wit-bindgen-gen-markdown = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "b0b9e457d56b7b18f2e9c7a876b8a6c62bcb98ca", optional = true, features = ["clap"] }
wit-bindgen-gen-guest-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "b0b9e457d56b7b18f2e9c7a876b8a6c62bcb98ca", optional = true, features = ["clap"] }
wit-bindgen-gen-guest-c = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "b0b9e457d56b7b18f2e9c7a876b8a6c62bcb98ca", optional = true, features = ["clap"] }
wit-bindgen-gen-guest-teavm-java = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "b0b9e457d56b7b18f2e9c7a876b8a6c62bcb98ca", optional = true, features = ["clap"] }

[features]
default = ['c', 'rust', 'markdown', 'teavm-java']
c = ['dep:wit-bindgen-gen-guest-c']
rust = ['dep:wit-bindgen-gen-guest-rust']
markdown = ['dep:wit-bindgen-gen-markdown']
teavm-java = ['dep:wit-bindgen-gen-guest-teavm-java']
