[package]
name = "wit-abi"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
clap = { version = "4.1.4", features = ["derive"] }
wit-parser = "0.6.1"
wit-bindgen-core = "0.3.0"
wit-bindgen-gen-markdown = { version = "0.3.0", optional = true, features = ["clap"] }
wit-bindgen-gen-guest-rust = { version = "0.3.0", optional = true, features = ["clap"] }
wit-bindgen-gen-guest-c = { version = "0.3.0", optional = true, features = ["clap"] }
wit-bindgen-gen-guest-teavm-java = { version = "0.3.0", optional = true, features = ["clap"] }

[features]
default = ['c', 'rust', 'markdown', 'teavm-java']
c = ['dep:wit-bindgen-gen-guest-c']
rust = ['dep:wit-bindgen-gen-guest-rust']
markdown = ['dep:wit-bindgen-gen-markdown']
teavm-java = ['dep:wit-bindgen-gen-guest-teavm-java']
