[package]
name = "wit-abi"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
clap = { version = "4.1.4", features = ["derive"] }
wit-bindgen-core = "0.11.0"
wit-bindgen-markdown = { version = "0.11.0", optional = true, features = ["clap"] }
wit-bindgen-rust = { version = "0.11.0", optional = true, features = ["clap"] }
wit-bindgen-c = { version = "0.11.0", optional = true, features = ["clap"] }
wit-bindgen-teavm-java = { version = "0.11.0", optional = true, features = ["clap"] }

[features]
default = ['c', 'rust', 'markdown', 'teavm-java']
c = ['dep:wit-bindgen-c']
rust = ['dep:wit-bindgen-rust']
markdown = ['dep:wit-bindgen-markdown']
teavm-java = ['dep:wit-bindgen-teavm-java']
